feat(galaxio-gatling-pro): cover four Gatling lines, keep numbers in one file
The skill carried 195 version literals, and two different kinds of fact were
written the same way. `gatling-maven-plugin 4.11.0` is a threshold — from that
version the build plugin sets `--add-opens` on its own, true forever.
`gatling-picatinny 1.25.0` was a snapshot: "the current release", false the day
the next one lands. Read identically, trusted identically, and one of them lied.

Snapshots are gone; thresholds, line crossings and version traps stay. Where a
current version is genuinely needed the skill now says how to look it up.

Four per-line profiles plus `beyond-3-13.md` collapse into one `versions.md`
matrix, a column per line. A row read across the columns is where that library
crosses, so the crossing table stops existing separately — it had four copies.
Bounds follow the line: a range is closed and fixed at both ends, `+` is open and
the top is looked up.

Gatling 3.9.x and 3.15.x are now covered, and a detected 3.10.x no longer matches
no dispatch row, falls through to the greenfield branch and receives 3.13
coordinates. The Galaxio ceiling is stated as what it is — a constraint the
dependency imposes on projects that keep Picatinny or a protocol plugin, not a
limit of this skill.

Closes #22, closes #23. Follow-up filed as #39.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>